# aiq

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE-THIRD-PARTY  README.md  pyproject.toml
.agents/skills/: README.md  TEMPLATE.md  aiq-deploy
.agents/skills/aiq-add-data-source/: SKILL.md
.agents/skills/aiq-add-tool/: SKILL.md
.claude/skills/: aiq-add-data-source  aiq-add-tool  aiq-configure  aiq-configure-workflow  aiq-customize-prompts-models  aiq-deploy  aiq-evaluation  aiq-maintain-ci  aiq-prepare-pr  aiq-release-qa  aiq-research
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  copy-pr-bot.yaml  ops-bot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-enhancement.yml  03-documentation.yml  config.yml
.github/skill-eval/: AGENTS.md  README.md  skills_eval_agent.py
.github/workflows/: ci.yml  request-nvskills-ci.yml  skills-eval.yml  ui.yml
ci/: markdown-link-check-config.json
configs/: config_cli_default.yml  config_domain_routing_and_skills.yml  config_frontier_models.yml  config_openshell.yml  config_skills.yml  config_web_azure_ai_search.yml  config_web_default_guardrails.yml  config_web_default_llamaindex.yml  config_web_frag.yml  config_web_frag_mcp_auth.yml  config_web_opensearch.yml
configs/domain_catalogs/: deep_research_domain_catalog.yml
configs/openshell/: README.md  aiq-research-policy.yaml
deploy/: .env.example  Dockerfile  entrypoint.py
deploy/compose/: README.md  docker-compose.per-user-auth.yaml  docker-compose.yaml  init-db.sql
deploy/helm/: README.md
deploy/openshell/: Dockerfile.aiq-demo
docs/notebooks/: 0_Getting_Started_with_AIQ.ipynb  1_Deep_Researcher_Web_Search.ipynb  2_Deep_Researcher_Customization.ipynb
docs/source/: index.md
frontends/aiq_api/: README.md  pyproject.toml
frontends/cli/: cli.py
frontends/ui/: .env.example  README.md  package-lock.json  package.json  server.js
scripts/: README.md  setup.sh  setup_openshell.sh  start_as_skill.sh  start_e2e.sh  validate_skills.py
scripts/openshell/: check_openshell_readiness.py  check_versions.py  install_gateway.sh  setup_openshell.sh  smoke_openshell_isolation.py  start_openshell_gateway.sh  version_contract.py
skills/aiq-deploy/: SKILL.md
skills/aiq-research/: SKILL.md
sources/duckduckgo_news_search/: README.md  pyproject.toml
sources/exa_web_search/: README.md  pyproject.toml
sources/exa_web_search/src/: __init__.py  register.py
sources/exa_web_search/tests/: test_register.py
sources/google_scholar_paper_search/: README.md  pyproject.toml
sources/knowledge_layer/: KNOWLEDGE-LAYER-SETUP.md  README.md  pyproject.toml
sources/knowledge_layer/src/: __init__.py  register.py
sources/knowledge_layer/src/azure_ai_search/: README.md  __init__.py  adapter.py
sources/knowledge_layer/src/opensearch/: __init__.py  adapter.py  distributed.py
sources/polymarket_prediction_market/: README.md  pyproject.toml
sources/you_com/: README.md  finance_research.py  pyproject.toml  research.py  search.py
sources/you_web_search/: pyproject.toml  search.py
tests/: test_agent_skills.py
tests/aiq_agent/: conftest.py
tests/deploy/: test_compose_deployment.py  test_helm_deployment_k8s.py
tests/knowledge_layer_tests/: run_adapter_compliance.py  test_azure_ai_search.py  test_opensearch_adapter.py  test_opensearch_live.py  test_opensearch_serverless_live.py  test_summary_store.py
tests/scripts/: test_openshell_gateway_installer.py  test_openshell_lifecycle_scripts.py  test_openshell_readiness_checker.py  test_openshell_smoke_wrapper.py  test_openshell_version_tools.py
tests/tokenomics/: test_nat_adapter.py  test_pricing.py  test_profile.py  test_report_builders.py  test_report_stats.py
(+474 files in other folders)
